fix input size  issue on mobile

--- a/src/components/AuthFormWrapper/FormLink/FormLink.module.sass
+++ b/src/components/AuthFormWrapper/FormLink/FormLink.module.sass
@@ -5,6 +5,7 @@
     font-size: 0.875rem
     min-width: 20%
     text-align: center
+    min-width: 17rem
 
 .link 
     color: #1C98EC
