--- a/src/components/Input/Input.module.sass
+++ b/src/components/Input/Input.module.sass
@@ -5,7 +5,7 @@
     border-radius: 0.75rem
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px
     background-color: white
-    min-width: 20rem
+    min-width: 17rem
 
 .input 
     border:0
